--- a/frontend/src/pages/User/LandingPage/LandingPage.css
+++ b/frontend/src/pages/User/LandingPage/LandingPage.css
@@ -3,35 +3,26 @@
   width: 220px;
   height: 60px;
   border-radius: 5px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .prim-btn {
   color: #fff;
   background-color: #242F9B;
   border: 2px solid #242F9B;
-  -webkit-transition: 0.2s ease;
   transition: 0.2s ease;
 }
 
 .prim-btn:hover {
   color: #fff;
   background-color: #1d2780;
-  -webkit-transition: 0.5s ease;
   transition: 0.5s ease;
 }
 
 .prim-btn:active {
   background-color: #131a58;
-  -webkit-transition: 0.1s ease;
   transition: 0.1s ease;
 }
 
@@ -39,284 +30,194 @@
   background: #fff;
   color: #242F9B;
   border: 2px solid #242F9B;
-  -webkit-transition: 0.2s ease;
   transition: 0.2s ease;
 }
 
 .sec-btn:hover {
   color: #242F9B;
   background: #f1f1f1;
-  -webkit-transition: 0.5s ease;
   transition: 0.5s ease;
 }
 
 .sec-btn:active {
   background-color: #e5e5e5;
-  -webkit-transition: 0.1s ease;
   transition: 0.1s ease;
 }
 
 .my-btn:focus {
   border: none;
-  -webkit-box-shadow: 0 0 0 5px #24309b7c;
-          box-shadow: 0 0 0 5px #24309b7c;
-  -webkit-transition: 0.3s ease;
+  box-shadow: 0 0 0 5px #24309b7c;
   transition: 0.3s ease;
 }
 
 @media screen and (max-width: 620px) {
   .my-btn {
-    display: block;
-    width: 80px;
-    height: 50px;
-    border-radius: 5px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    display: block !important;
+    width: 80px !important;
+    height: 50px !important;
+    border-radius: 5px !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
   }
 }
-
 .landing-wrapper {
   margin-top: 88px;
 }
-
 .landing-wrapper .landing-jumbotron {
   background: #fff;
 }
-
 .landing-wrapper .landing-jumbotron .jumbotron-container {
   height: 600px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
 }
-
 .landing-wrapper .landing-jumbotron .jumbotron-container .jumbotron-text {
   max-width: 640px;
 }
-
 .landing-wrapper .landing-jumbotron .jumbotron-container .jumbotron-text h1 {
   font-size: 56px;
 }
-
 .landing-wrapper .landing-jumbotron .jumbotron-container .jumbotron-text p {
   margin: 50px 0 55px 0;
 }
-
 .landing-wrapper .landing-jumbotron .jumbotron-container .jumbotron-buttons {
   max-width: 480px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
 }
-
 .landing-wrapper .landing-jumbotron .jumbotron-container .jumbotron-pic {
   max-width: 480px;
 }
-
 @media screen and (max-width: 620px) {
   .landing-wrapper .jumbotron-container {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
   .landing-wrapper .jumbotron-container .jumbotron-text h1 {
-    font-size: 32px;
+    font-size: 32px !important;
   }
   .landing-wrapper .jumbotron-container .jumbotron-buttons .my-btn {
-    width: 145px;
+    width: 145px !important;
   }
 }
-
 .landing-wrapper .landing-cari {
   background: #242F9B;
   color: #fff;
 }
-
 .landing-wrapper .landing-cari .cari-container {
   height: 300px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: column;
+  align-items: center !important;
+  justify-content: center !important;
 }
-
 .landing-wrapper .landing-cari .cari-container h1, .landing-wrapper .landing-cari .cari-container p {
+  color: #fff;
   max-width: 860px;
+  text-align: center;
 }
-
 .landing-wrapper .landing-cari .cari-container p {
   margin: 10px 0 30px 0;
   text-align: center;
 }
-
 @media screen and (max-width: 620px) {
   .landing-wrapper .cari-container .my-btn {
-    width: 180px;
+    width: 180px !important;
   }
 }
-
 .landing-wrapper .landing-menu .menu-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .landing-wrapper .landing-menu .menu-container .menu-desc, .landing-wrapper .landing-menu .menu-container .menu-pic {
   width: 50vw;
   height: 600px;
 }
-
 .landing-wrapper .landing-menu .menu-container .menu-desc .containers, .landing-wrapper .landing-menu .menu-container .menu-pic .containers {
   height: 600px;
   padding-left: 10vw;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
   max-width: 530px;
 }
-
 .landing-wrapper .landing-menu .menu-container .menu-desc .containers h1, .landing-wrapper .landing-menu .menu-container .menu-pic .containers h1 {
   font-size: 36px;
 }
-
 .landing-wrapper .landing-menu .menu-container .menu-desc .containers p, .landing-wrapper .landing-menu .menu-container .menu-pic .containers p {
   margin: 40px 0 24px 0;
 }
-
 .landing-wrapper .landing-menu .menu-container .menu-desc .float-end, .landing-wrapper .landing-menu .menu-container .menu-pic .float-end {
   padding-left: 0;
   padding-right: 10vw;
 }
-
 .landing-wrapper .landing-menu .menu-container .menu-desc {
   background: #fff;
 }
-
 .landing-wrapper .landing-menu .menu-container .menu-pic {
   background: #000646;
 }
-
 @media screen and (max-width: 620px) {
   .landing-wrapper .desc-first .menu-container {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
+    flex-direction: column-reverse !important;
   }
   .landing-wrapper .menu-container {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
   .landing-wrapper .menu-container .menu-desc .containers {
     max-width: 290px !important;
-    padding: 0 12px;
-    height: 400px;
+    padding: 0 12px !important;
+    height: 400px !important;
   }
   .landing-wrapper .menu-container .menu-desc .containers p {
-    width: 210px;
+    width: 210px !important;
   }
   .landing-wrapper .menu-container .menu-desc .containers .my-btn {
-    width: 180px;
+    width: 180px !important;
   }
   .landing-wrapper .menu-container .menu-pic {
     width: 100vw !important;
   }
 }
-
 .landing-wrapper .landing-extras {
   background: #DBDFFD;
 }
-
 .landing-wrapper .landing-extras .extras-container {
   height: 250px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
 }
-
 .landing-wrapper .landing-extras .extras-container .extras-desc p {
   margin-top: 20px;
   font-size: 28px;
 }
-
 .landing-wrapper .landing-extras .extras-container .extras-buttons {
   width: 485px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
-
+.landing-wrapper .landing-extras .extras-container .extras-buttons .sec-btn {
+  background: #DBDFFD;
+}
 @media screen and (max-width: 620px) {
   .landing-wrapper .landing-extras .extras-container {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    justify-content: center !important;
+    flex-direction: column !important;
   }
   .landing-wrapper .landing-extras .extras-container .extras-desc p {
-    font-size: 20px;
+    font-size: 20px !important;
   }
   .landing-wrapper .landing-extras .extras-container .extras-buttons {
-    max-width: 315px;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
+    max-width: 315px !important;
+    justify-content: space-around !important;
   }
   .landing-wrapper .landing-extras .extras-container .extras-buttons .my-btn {
-    width: 130px;
+    width: 130px !important;
   }
 }
+
 /*# sourceMappingURL=LandingPage.css.map */
