chore: edit layout prosedur beasiswa & link

--- a/frontend/src/pages/User/DaftarBeasiswa/DaftarBeasiswa.css
+++ b/frontend/src/pages/User/DaftarBeasiswa/DaftarBeasiswa.css
@@ -3,58 +3,68 @@
   width: 220px;
   height: 60px;
   border-radius: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .prim-btn {
   color: #fff;
-  background-color: #242F9B;
-  border: 2px solid #242F9B;
+  background-color: #242f9b;
+  border: 2px solid #242f9b;
+  -webkit-transition: 0.2s ease;
   transition: 0.2s ease;
 }
 
 .prim-btn:hover {
   color: #fff;
   background-color: #1d2780;
+  -webkit-transition: 0.5s ease;
   transition: 0.5s ease;
 }
 
 .prim-btn:active {
   background-color: #131a58;
+  -webkit-transition: 0.1s ease;
   transition: 0.1s ease;
 }
 
 .sec-btn {
   background: #fff;
-  color: #242F9B;
-  border: 2px solid #242F9B;
+  color: #242f9b;
+  border: 2px solid #242f9b;
+  -webkit-transition: 0.2s ease;
   transition: 0.2s ease;
 }
 
 .sec-btn:hover {
-  color: #242F9B;
+  color: #242f9b;
   background: #f1f1f1;
+  -webkit-transition: 0.5s ease;
   transition: 0.5s ease;
 }
 
 .sec-btn:active {
   background-color: #e5e5e5;
+  -webkit-transition: 0.1s ease;
   transition: 0.1s ease;
 }
 
 .my-btn:focus {
   border: none;
-  box-shadow: 0 0 0 5px #24309b7c;
+  -webkit-box-shadow: 0 0 0 5px #24309b7c;
+          box-shadow: 0 0 0 5px #24309b7c;
+  -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
 }
 
-.daftar-bea-wrapper {
-  margin-top: 88px;
-}
 .daftar-bea-wrapper .daftar-bea-title {
   padding-top: 30px;
 }
-
 /*# sourceMappingURL=DaftarBeasiswa.css.map */
