--- a/frontend/src/pages/User/DaftarBeasiswa/DaftarBeasiswa.scss
+++ b/frontend/src/pages/User/DaftarBeasiswa/DaftarBeasiswa.scss
@@ -9,8 +9,8 @@
 }
 .prim-btn {
   color: #fff;
-  background-color: #242F9B;
-  border: 2px solid #242F9B;
+  background-color: #242f9b;
+  border: 2px solid #242f9b;
   transition: 0.2s ease;
 }
 .prim-btn:hover {
@@ -24,12 +24,12 @@
 }
 .sec-btn {
   background: #fff;
-  color: #242F9B;
-  border: 2px solid #242F9B;
+  color: #242f9b;
+  border: 2px solid #242f9b;
   transition: 0.2s ease;
 }
 .sec-btn:hover {
-  color: #242F9B;
+  color: #242f9b;
   background: #f1f1f1;
   transition: 0.5s ease;
 }
@@ -44,7 +44,6 @@
 }
 
 .daftar-bea-wrapper {
-  margin-top: 88px;
   .daftar-bea-title {
     padding-top: 30px;
   }
