--- a/frontend/src/pages/User/ProsedurBeasiswa/ProsedurBeasiswa.css
+++ b/frontend/src/pages/User/ProsedurBeasiswa/ProsedurBeasiswa.css
@@ -1,1 +1,27 @@
-/* No CSS *//*# sourceMappingURL=ProsedurBeasiswa.css.map */
+.card_prosedur {
+  margin-top: 100px 0;
+}
+
+.card-body_prosedur {
+  margin: 50px 0 !important;
+}
+
+.judul {
+  margin-top: 50px;
+}
+
+h5 {
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 140.62%;
+  /* or 70px */
+  color: #242e92;
+}
+
+img {
+  width: 212px;
+  height: 171px;
+}
+/*# sourceMappingURL=ProsedurBeasiswa.css.map */
