chore : add function scroll top and fixed layout

--- a/frontend/src/pages/User/Profil/Profil.css
+++ b/frontend/src/pages/User/Profil/Profil.css
@@ -1,4 +1,1 @@
-.kolom-data-profil {
-  background: #dbdffd !important;
-}
-/*# sourceMappingURL=Profil.css.map */
+/* No CSS *//*# sourceMappingURL=Profil.css.map */
