--- a/frontend/src/Components/FormDataProfil/DataProfil.scss
+++ b/frontend/src/Components/FormDataProfil/DataProfil.scss
@@ -4,6 +4,9 @@
     background: #ffffff;
     border-radius: 11px;
     margin-top: -15px;
+    box-shadow: 0 1px 1px hsl(0deg 0% 0% / 0.075),
+      0 2px 2px hsl(0deg 0% 0% / 0.075), 0 4px 4px hsl(0deg 0% 0% / 0.075),
+      0 8px 8px hsl(0deg 0% 0% / 0.075), 0 16px 16px hsl(0deg 0% 0% / 0.075);
     .card-body {
       p {
         font-family: "PT Sans";
