--- a/frontend/src/pages/User/Profil/Profil.scss
+++ b/frontend/src/pages/User/Profil/Profil.scss
@@ -1,3 +1,3 @@
-.kolom-data-profil {
-  background: #dbdffd !important;
-}
+// .kolom-data-profil {
+// //   background: #dbdffd !important;
+// // }
