--- a/frontend/src/Components/UserNavbar/Navbar.scss
+++ b/frontend/src/Components/UserNavbar/Navbar.scss
@@ -1,8 +1,20 @@
 .navbar-glass {
-  background: rgba(255, 255, 255, 0.3);
-  backdrop-filter: blur(12.2px);
-  -webkit-backdrop-filter: blur(12.2px);
-  transition: 0.6s ease-in;
+  background: rgba(255, 255, 255, 0.59);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(12.1px);
+  -webkit-backdrop-filter: blur(12.1px);
+}
+
+@media screen and (max-width: 768px) {
+  .no-shadow {
+    background: rgba(255, 255, 255, 0.59);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(12.1px);
+    -webkit-backdrop-filter: blur(12.1px);
+  }
+  .navbar-glass {
+    color: #000 !important;
+  }
 }
 
 .no-shadow {
@@ -17,6 +29,12 @@
     width: auto;
   }
   .nav-right {
+    .nav-username {
+      color: #242F9B;
+    }
+    .user-nav-dropdown-item {
+      padding: 16px;
+    }
     li {
       margin: 0 10px;
     }
