chore: update stylings.

--- a/frontend/src/Components/FormDaftar/FormListBeasiswa.scss
+++ b/frontend/src/Components/FormDaftar/FormListBeasiswa.scss
@@ -147,7 +147,11 @@
     0 4px 4px hsl(0deg 0% 0% / 0.075),
     0 8px 8px hsl(0deg 0% 0% / 0.075),
     0 16px 16px hsl(0deg 0% 0% / 0.075);
-
+  .card-header{
+    h5 {
+      color: unset;
+    }
+  }
   @include red;
   @include green;
   @include orange;
