--- a/frontend/src/Components/FormDaftar/FormListBeasiswa.css
+++ b/frontend/src/Components/FormDaftar/FormListBeasiswa.css
@@ -61,6 +61,9 @@
   border-radius: 10px;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075), 0 2px 2px rgba(0, 0, 0, 0.075), 0 4px 4px rgba(0, 0, 0, 0.075), 0 8px 8px rgba(0, 0, 0, 0.075), 0 16px 16px rgba(0, 0, 0, 0.075);
 }
+.daftar-item .card-header h5 {
+  color: unset;
+}
 .daftar-item .red {
   background: linear-gradient(244deg, #c1292e, #dd8285);
   background-size: 400% 400%;
